Fixed the social links alignment issue

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -53,10 +53,6 @@
     }
 }
 
-.social-container {
-    padding-left: 150px;
-}
-
 .follow-logo {
     height: 60px;
     /* width:75px; */
